--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
         <button id="play-pause" class="bi bi-play-circle-fill"></button>
         <button id="proximo" class="bi bi-skip-forward-fill"></button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
